--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
 <!-- TODO: add HTML content to your profile -->
+
+<html>
+
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700|Open+Sans:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <div class="section-white text-center">
+      <img src="images/profile.jpg" alt="Boris profile" class="img-cirlce">
+      <h1>Boris Paillard</h1>
+      <h2>CEO @Le Wagon</h2>
+      <p>After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: bring technical skills to creative people.</p>
+      <a href="#" class="btn-red">See for yourself</a>
+    </div>
+
+    <div class="section-white text-center">
+      <ul class="list-inline">
+        <li>
+          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-raspberry-pi"></i> Linkedin</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="section-white">
+      <h2>My Favorit Movies</h2>
+      <table>
+        <tbody>
+          <tr>
+            <td>
+              <img src="images/alien.jpg" alt="Alien movie cover">
+            </td>
+            <td>
+              <h3>Alien</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quis voluptate ullam molestiae dignissimos quam</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/alien.jpg" alt="Alien movie cover">
+            </td>
+            <td>
+              <h3>Alien</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quis voluptate ullam molestiae dignissimos quam</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/alien.jpg" alt="Alien movie cover">
+            </td>
+            <td>
+              <h3>Alien</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quis voluptate ullam molestiae dignissimos quam</p>
+            </td>
+          </tr>
+
+
+        </tbody>
+      </table>
+    </div>
+  </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
